--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "node-sass": "^4.9.3",
+    "prerender-spa-plugin": "^3.4.0",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.5.17"
   },
