--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "progressive-image": "^1.2.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vue-touch": "^2.0.0-beta.4",
