--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "vue": "^2.5.17",
+    "vue-masonry": "^0.11.7",
     "vue-router": "^3.0.1",
     "vue-touch": "^2.0.0-beta.4",
     "vuex": "^3.0.1"
